# hillhorn

./: .cursorrules  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_REPORT.md  BUILD_OPTIONS.md  BUILD_READINESS_REPORT.md  CHECKLIST.md  HILLHORN_EFFICIENCY.md  HILLHORN_SNAKE_TEST_RESULT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  INSTALL.md  INTEGRATION_PLAN_CURSOR.md  LICENSE  MCP_HILLHORN_SETUP.md  PLAN_IMPROVEMENTS.md  PLAN_UNIFIED_HILLHORN.md  POST_BUILD_WORKFLOW.md  README.md  README_EXTENSION.md  README_RU.md  ROADMAP_IDE.md  SOUL.md  agents.py  app.py  code_indexer.py  deepseek_gateway.py  embeddings.py  hillhorn_mcp_server.py  nwf_jepa.py  nwf_memory_adapter.py  nwf_memory_utils.py  process_emblem.py  pyproject.toml  pyrightconfig.json  requirements.txt  snake.py  tools.py
.cursor/: mcp.json
.nwf/: .indexed  index.sqlite
config/: openclaw_config.example.yaml  opencloud_deepseek.example.json
docker/: Dockerfile.vscode  README.md  docker-compose.yml
docs/: HILLHORN_IMPROVEMENTS_PLAN.md  HILLHORN_OPTIMIZATION_PLAN.md  NWF_IMPLEMENTATION_PLAN.md
hillhorn_checks/: PLAN.md  README.md  REPORT.md  REPORT_TEMPLATE.md  analyze.py  results.json  run_all.ps1  run_tasks.py
scripts/: PREVENT_DISK_BLOAT.md  add_to_windows_startup.ps1  build.ps1  build_extension.ps1  build_moltbot.ps1  build_vscode_docker.ps1  check_vscode_build.ps1  cleanup_disk.ps1  cost_report.ps1  diagnose.ps1  fix_docker.ps1  fix_native_modules.ps1  fix_policy_watcher.ps1  hillhorn_status.ps1  install_all.ps1  install_docker.ps1  install_extension_local.ps1  prepare_docker.ps1  (+16 more)
(+18 files in other folders)
