[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hillhorn"
version = "0.1.0"
description = "NWF-JEPA + DeepSeek MCP Gateway. Neuro-Weight Fields by Roman Belousov: https://doi.org/10.24108/preprints-3113697"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hillhorn" }]
# NWF theory: Roman Belousov (Роман Белоусов) - https://doi.org/10.24108/preprints-3113697
keywords = ["jepa", "nwf", "deepseek", "ai", "agents"]
